fix: Allow external images for Naver crawler
Adds a `referrer` meta tag to prevent 403 Forbidden errors when Naver or other external crawlers attempt to access images. This ensures proper indexing and display of images on search engine results.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Fix for Naver/External Image blocking (403 Forbidden) -->
+    <meta name="referrer" content="no-referrer">
     <title>PPT Designer Portfolio</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
